--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,7 @@
       <ul id="nav-mobile" class="right hide-on-med-and-down">
         <li><%= link_to "Home", root_path %></li>
         <li><%= link_to "Users", users_path %></li>
+        <li><%= link_to "Login", login_path %></li>
         <li></li>
       </ul>
     </div>
